<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"></string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="hello_world">Hello world!</string>


    <string name="menu_home_string">Home</string>
    <string name="menu_login_string">Login or Register</string>
    <string name="menu_cart_string">Items In Cart</string>
    <string name="menu_location_string">Locations</string>
    <string name="drawer_menu_string">Menu</string>
    <string name="menu_rewards_string">Rewards</string>
    <string name="menu_review_string">reviews</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_scanner">ScannerActivity</string>


    <string name="WebserviceName">Service</string>
    <string name="TimeIntervalInSeconds">10</string>
    <string name="NoOfDaysAfterClearNotificaiton">30</string>
    <string name="WebServiceDescription">Notification.</string>
    <string name="NotificationURL">https://rrordering.247chow.com/demo/u-embed/appNotifyFetch-1/</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
